--- a/example/keyboard-response/package.json
+++ b/example/keyboard-response/package.json
@@ -26,7 +26,6 @@
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
-    "vue-tsc": "^1.8.19",
-    "vue-psych": "file:../"
+    "vue-tsc": "^1.8.19"
   }
 }
