--- a/example/button-response/package.json
+++ b/example/button-response/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-psych": "link:.."
+    "vue-psych": "file:..\\.."
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
