--- a/example/keyboard-response/package.json
+++ b/example/keyboard-response/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-psych": "file:..\\.."
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
