chore: supplementary docs and code comments

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ pnpm-lock.yaml
 /cypress/videos/
 /cypress/screenshots/
 
+docs/.vitepress/dist
+docs/.vitepress/cache
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
