--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "vue": "^3.3.4"
@@ -47,6 +50,7 @@
     "sass": "^1.69.5",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vitepress": "1.0.0-rc.31",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
